Update project Renato V.0

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">DevOps</div>
+	<div class="alert">DevOps- Treinamento junto ao Alan Carlos</div>
 	
 	<div class="container">
 		<div class="logo">
