--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">DevOps- Treinamento junto ao Alan Carlos - V2</div>
+	<div class="alert">DevOps Workshop</div>
 	
 	<div class="container">
 		<div class="logo">
